Fix scrollbar gutter layout changes

--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,8 @@
 /* Global styles */
+:root {
+  scrollbar-gutter: stable both-edges;
+}
+
 body {
   background-color: #EFEFEF;
   color: #141414;
